--- a/JobNamesCloud/JobNamesCloud.Rmd
+++ b/JobNamesCloud/JobNamesCloud.Rmd
@@ -73,6 +73,10 @@ num_of_nam_df <-  arrange(num_of_nam_df, desc(num_of_offers))
 
 
 ggplot(num_of_nam_df, aes(x=factor(1), num_of_offers, fill=as.factor(paste(phrase, num_of_offers, sep = " - ")))) + geom_bar(stat="identity", width=1) + ggtitle("Czestosc wystepowania poszukiwanej frazy")+coord_polar(theta = "y") + theme(legend.position="right", legend.title=element_blank(), plot.title = element_text(lineheight=3, face="bold", color="black", size=12)) + xlab("")+ylab("")
+
+num_of_nam_df$phrase <- reorder(num_of_nam_df$phrase, num_of_nam_df$num_of_offers, mean)
+ggplot(num_of_nam_df, aes(x=phrase, y=num_of_offers, fill=as.factor(paste(phrase, num_of_offers, sep = " - ")))) + geom_bar(stat="identity", width=1) + ggtitle("Czestosc wystepowania poszukiwanej frazy")+ theme(legend.position="right", legend.title=element_blank(), plot.title = element_text(lineheight=3, face="bold", color="black", size=12)) + xlab("")+ylab("") + coord_flip() +scale_y_sqrt(breaks=c(0,1,5,10,50,100,200,500))
+
 ```
 
 ## Tabela pzedstawiająca uporządkowane wartości z wykresu
