--- a/analizy_05_15/czestosci.Rmd
+++ b/analizy_05_15/czestosci.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, results='asis', warning=FALSE, message=FALSE)
 ```
 
 ```{r archivist, warning=FALSE, message=FALSE}
