--- a/analizy_05_15/czestosci.Rmd
+++ b/analizy_05_15/czestosci.Rmd
@@ -112,3 +112,48 @@ ggplot(dat[c(2:17,19),], aes(tool_no, no)) +
 
 ```
 
+## GitHub
+
+Dane pobrane z pakietem GitHubEr. Dotyczą tylko repozytoriów R użytkowników z lokalizacją określoną na Polskę lub któreś z dużych polskich miast.
+
+Przedstawiamy jaka frakcja użytkowników używa określonych pakietów/funkcji. A następnie pokazujemy jak często dana funkcja/pakiet jest używana.
+
+```{r, warning=FALSE, message=FALSE}
+load("../pracuj/mat.rda")
+
+vv <- colMeans(mat>0)
+df <- data.frame(freq=vv, pakiet=names(vv))
+df$pakiet <- reorder(df$pakiet, df$freq, mean)
+
+ggplot(df, aes(pakiet, fill=pakiet, y=freq)) +
+  geom_bar(stat="identity") + theme_bw() +
+  coord_flip() + theme(legend.position="none") +
+  scale_y_continuous(labels = scales::percent)+
+  xlab("")+ylab("Procent repozytoriów używających pakietu/funkcji [polski github]")
+
+
+df <- as.data.frame(as.table(mat))
+df$Var2 <- reorder(df$Var2, df$Freq, median)
+ggplot(df, aes(Var2, fill=Var2, y=Freq)) +
+  geom_violin() + theme_bw() +
+  coord_flip() + theme(legend.position="none") +
+  scale_y_log10(breaks=c(1,2,5,10,20,50,100,200,500,1000,200))+
+  xlab("")+ylab("Liczba wywołań określonego pakietu/funkcji [polski github]")
+```
+
+## GitHub - PCA
+
+Analiza składowych głównych.
+
+Nie bierzemy pod uwagę liczby użyć danego pakietu/funkcji a jedynie fakty użycia/nie używania okreslonego narzędzia.
+
+```{r, warning=FALSE, message=FALSE, fig.width=12, fig.height=12}
+library(ggfortify)
+library(ggrepel)
+tmp <- prcomp(mat>0)
+autoplot(tmp, loadings = TRUE,  loadings.colour = 'blue',
+         loadings.label = TRUE, loadings.label.size = 5, label=F,
+				 shape=FALSE) + theme_bw() + 
+	geom_text_repel(data=tmp$x, aes(PC1, PC2, label=rownames(tmp$x)), size=3, alpha=0.8)
+
+```
